--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="title_activity_validator_nav">ValidatorNavActivity</string>
+    <string name="title_activity_pelapor_nav">PelaporNavActivity</string>
 </resources>
